bottom scrollbar bug

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,7 @@
 body
     background-color: #000000
+    overflow-x: hidden
+
 *
     color: white
 
